# Mail

./: -H  .gitignore  CMakeLists.txt  FalsePositiveTest.cpp  README.md  TrueNegativeTest.cpp  TruePositiveTest.cpp  TruePositiveTwoHashTest.cpp  docker-compose.yml  dockerfile  dockerfile.client  dockerfile.server  dockerfile.tests  entrypoint.sh  main.cpp  package-lock.json  package.json
Handle corrupted or missing URL list/: UrlListUtils.cpp  UrlListUtils.h  test_url_list.cpp
Handle missing or corrupted file/: BloomFilter.cpp  BloomFilter.h
Load Bloom Filter state from file/: BloomFilter.cpp  BloomFilter.h  DockerFile  PersistenceTest.cpp  bloom_setup.cpp  bloom_setup.h
MyApplication/: build.gradle  package-lock.json  package.json
MyApplication/app/: build.gradle  build.gradle.kts
MyApplication/app/src/androidTest/java/com/example/gmailapplication/: ExampleInstrumentedTest.java
MyApplication/app/src/main/: AndroidManifest.xml
MyApplication/app/src/main/res/drawable/: add.xml  arrow_back.xml  bg_formatting_button.xml  bg_label_chip.xml  check.xml  circle_background.xml  circle_blue.xml  close.xml  create_label_button_bg.xml  delete.xml  drafts.xml  edit.xml  email_item_selector.xml  emoji_people.xml  fab_compose_icon.xml  help.xml  ic_account_circle.xml  ic_all_mail.xml  ic_attachment.xml  ic_gmail_logo.xml  ic_hamburger_menu.xml  ic_important.xml  ic_inbox_empty.xml  ic_people.xml  ic_spam.xml  ic_star_filled.xml  ic_theme_dark.xml  ic_theme_light.xml  label.xml  label_background.xml  logout.xml  mark_as_read.xml  menu.xml  more_vert.xml  nav_header_gradient.xml  person.xml  report.xml  search.xml  search_bar_background.xml  send.xml  (+3 more)
MyApplication/app/src/main/res/layout/: activity_compose.xml  activity_email_detail.xml  activity_inbox.xml  activity_labels.xml  activity_login.xml  activity_main.xml  activity_manage_labels.xml  activity_register.xml  dialog_create_label.xml  item_email.xml  item_label.xml  nav_header.xml  nav_header_main.xml
MyApplication/app/src/main/res/menu/: compose_menu.xml  drawer_menu.xml  email_detail_menu.xml  inbox_menu.xml  labels_menu.xml  nav_drawer_menu.xml
MyApplication/app/src/main/res/values/: colors.xml  dimes.xml  strings.xml  styles.xml
MyApplication/app/src/main/res/values-night/: colors.xml
MyApplication/app/src/main/res/xml/: locales_config.xml  network_security_config.xml
MyApplication/gradle/: libs.versions.toml
MyApplication/gradle/wrapper/: gradle-wrapper.properties
Support multiple hash functions/: BloomFilter.cpp  HashDouble.h  HashFunction.h  HashStd.h  test_bloom_filter.cpp
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
client/: Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.css  App.js  RequireAuth.jsx  index.js
client/src/components/: Layout.jsx  Loading.css  Loading.jsx  LogoutButton.jsx  SearchBar.jsx  SendMailComponent.jsx  Sidebar.css  Sidebar.jsx  ThemeToggle.jsx  Topbar.css  Topbar.jsx
client/src/context/: SendMailContext.jsx
client/src/pages/: DraftEditPage.jsx  HomePage.jsx  InboxPage.jsx  LabelPage.jsx  Login.jsx  MailViewPage.jsx  Register.jsx  SearchResultsPage.jsx  SentPage.jsx
client/src/styles/: HomePage.css  Login.css  MailViewPage.css  Register.css  SearchResults.css  SendMailComponent.css  global.css  theme.css
client/src/theme/: ThemeProvider.jsx
client/src/utils/: api.js  waitForServer.js
data/: ip.env  urls.txt
old/: SimpleHash.h  UrlListUtils.cpp  UrlListUtils.h
server/: app.js  package-lock.json  package.json
server/controllers/: authController.js  mailController.js
server/memory/: memory.js
server/routes/: authRoutes.js  mailRoutes.js
server/utils/: cryptoUtil.js
src/: BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  HashStd.h  InfiniteCommandLoop.cpp  InfiniteCommandLoop.h  PersistenceTest.cpp  TCP_Server.cpp  TCP_Server.h  TestOperateBloomFilter.cpp  TrueNegativeTwoHashTest.cpp  URLChecker.cpp  URLChecker.h  UrlListUtils.h  UrlStorage.cpp  UrlStorage.h  bloom_setup.cpp  bloom_setup.h  client.py  docker-compose.yml  dockerfile.client  dockerfile.server  main  main.cpp  run_mail_demo.sh  sendmuli.js  tcp_client.py  test_blacklist.ps1  test_bloom_filter.cpp  test_config_parser.cpp  test_labels.ps1  test_mail_features.ps1  test_url_list.cpp
src/client/: package.json
src/client/src/: App.css  App.jsx  index.jsx
src/client/src/pages/: Login.jsx  Register.jsx
src/controllers/: authController.js
src/cpp_server/: BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  HashDouble.h  HashFunction.h  HashStd.h  InfiniteCommandLoop.cpp  InfiniteCommandLoop.h  TCP_Server.cpp  TCP_Server.h  URLChecker.cpp  UrlListUtils.cpp  client.py  dockerfile  main.cpp
src/cpp_server/tests/: test_BadRequest.cpp  test_ClientServer.cpp  test_Integration.cpp
src/modles/: userModel.js
src/node_server/: .env  app.js  checkUser.js  dockerfile  index.js  package-lock.json  package.json
src/node_server/controllers/: authController.js  blacklistController.js  labelsController.js  mailController.js
src/node_server/middleware/: authMiddleware.js
src/node_server/middlewares/: authMiddleware.js
src/node_server/models/: Blacklist.js  Mail.js  User.js  labels.js  lables.js
src/node_server/routes/: authRoutes.js  blacklist.js  index.js  labels.js  mailRoutes.js  mails.js  users.js  users.js.backup
src/node_server/utils/: blacklistClient.js  extractUrls.js  inboxMap.js
src/tests/: FalsePositiveTest.cpp  OutputStringTest.cpp  TestOperateBloomFilter.cpp  TrueNegativeTest.cpp  TruePositiveTest.cpp  test_BloomFilter.cpp  test_ClientDelete.cpp  test_URLChecker.cpp  test_UrlStorage.cpp  test_bloom_filter.cpp  test_config_parser.cpp  test_url_list.cpp
tests/: FalsePositiveTest.cpp  OutputStringTest.cpp
תרגיל 1 מתקדם/: BloomFilter.h  HashFunction.h  bloom_setup.cpp  bloom_setup.h  main.cpp  test_config_parser.cpp
(+65 files in other folders)
